@@ -12,6 +12,7 @@
 #include "x/w/listlayoutmanager.H"
 #include "x/w/impl/container.H"
 #include "x/w/radio_group.H"
+#include "x/w/synchronized_axis.H"
 #include "screen.H"
 #include "defaulttheme.H"
 
@@ -32,6 +33,28 @@ new_radio_groups_t &new_radio_groups_t::operator=(const new_radio_groups_t &)
 
 new_radio_groups_t &new_radio_groups_t::operator=(new_radio_groups_t &&)
 =default;
+
+
+typedef uielements::new_synchronized_axis_t new_synchronized_axis_t;
+
+new_synchronized_axis_t::new_synchronized_axis_t()=default;
+
+new_synchronized_axis_t::~new_synchronized_axis_t()=default;
+
+new_synchronized_axis_t
+::new_synchronized_axis_t(const new_synchronized_axis_t &)=default;
+
+new_synchronized_axis_t
+::new_synchronized_axis_t(new_synchronized_axis_t &&)=default;
+
+new_synchronized_axis_t &
+new_synchronized_axis_t::operator=(const new_synchronized_axis_t &)
+=default;
+
+new_synchronized_axis_t &
+new_synchronized_axis_t::operator=(new_synchronized_axis_t &&)
+=default;
+
 
 uielements::~uielements()=default;
 
@@ -55,6 +78,22 @@ radio_group uielements::get_radio_group(const std::string_view &name) const
 	auto iter=new_radio_groups.find(std::string{name.begin(), name.end()});
 
 	if (iter == new_radio_groups.end())
+		throw EXCEPTION(gettextmsg
+				(_("Radio button group %1% was not found"),
+				 name));
+
+	return iter->second;
+}
+
+synchronized_axis uielements
+::get_synchronized_axis(const std::string_view &name) const
+{
+	// TODO: C++20;
+
+	auto iter=new_synchronized_axis.find(std::string{name.begin(),
+								  name.end()});
+
+	if (iter == new_synchronized_axis.end())
 		throw EXCEPTION(gettextmsg
 				(_("Radio button group %1% was not found"),
 				 name));
